--- a/index.html
+++ b/index.html
@@ -45,19 +45,15 @@
                             <div class="row">
                                 <div class="col-48 col-md-3 p-5 mt-3">
                                     <a href="#"><img src="./assets/img/category_img_01.png" class="rounded-circle img-fluid border"></a>
-                                    <h5 class="text-center mt-3 mb-3">건강상태</h5>
+                                    <h5 class="text-center mt-3 mb-3">하기 싫다.</h5>
                                 </div>
                                 <div class="col-48 col-md-3 p-5 mt-3">
                                     <a href="#"><img src="./assets/img/category_img_02.png" class="rounded-circle img-fluid border"></a>
-                                    <h2 class="h5 text-center mt-3 mb-3">수면</h2>
+                                    <h2 class="h5 text-center mt-3 mb-3">그래도 해봐야지</h2>
                                 </div>
                                 <div class="col-48 col-md-3 p-5 mt-3">
                                     <a href="#"><img src="./assets/img/category_img_03.png" class="rounded-circle img-fluid border"></a>
-                                    <h2 class="h5 text-center mt-3 mb-3">과제&강의</h2>
-                                </div>
-                                <div class="col-48 col-md-3 p-5 mt-3">
-                                    <a href="#"><img src="./assets/img/category_img_03.png" class="rounded-circle img-fluid border"></a>
-                                    <h2 class="h5 text-center mt-3 mb-3">날씨</h2>
+                                    <h2 class="h5 text-center mt-3 mb-3">집에 가고 싶다</h2>
                                 </div>
                             </div>
                         </header>
@@ -78,26 +74,13 @@
                      <ul>
                         <li><a href="index.html">Homepage</a></li>
                          <li>
-                            <span class="opener">OUTLIER 최종발표회</span>
+                            <span class="opener">OUTLIER 발표회 자료집</span>
                             <ul>
-                                <li><a href="HW1.html">HW1</a></li>
-                                <li><a href="HW2.html">HW2</a></li>
-                                <li><a href="HW3.html">HW3</a></li>
-                                <li><a href="HW4.html">HW4</a></li>
-                                <li><a href="HW5.html">HW5</a></li>
+                                <li><a href="#">2021년 7월 최종 발표회</a></li>
                             </ul>
                         </li>
                         <li><a href="#"> 캘린더 </a></li>
                         <li><a href="smartclass.html"> 과제&강의 현황 </a></li>
-                        <li>
-                            <span class="opener">메뉴이다.</span>
-                            <ul>
-                                <li><a href="#">1번메뉴이다</a></li>
-                                <li><a href="#">2번메뉴이다</a></li>
-                                <li><a href="#">3번메뉴이다</a></li>
-                                <li><a href="#">4번메뉴이다</a></li>
-                            </ul>
-                        </li>
                     </ul>
                     </nav>
                 </div>
@@ -111,8 +94,7 @@
                 <div class="row pt-2">
                     <div class="col-12">
                         <p class="text-left text-light">
-                            2021 OUTLIER 최종 발표회
-                            | 20181076 주다희 20191047 박수연 20191064 이지효
+                            2021 OUTLIER
                         </p>
                     </div>
                 </div>
