--- a/index.html
+++ b/index.html
@@ -1,120 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <title>JOOVIS</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- 페이지 아이콘 -->
-    <link rel="shortcut icon" href="assets/img/dogduk_icon.png">
-
-    <!-- Css Styles -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/templatemo.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="assets/css/main.css" />
-
-    <!-- 폰트 -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-
-</head>
-
-<body class="is-preload">
-    <!-- Wrapper -->
-    <div id="wrapper">
-    <!-- Main -->
-        <div id="main">
-            <div class="inner">
-                <!-- Header -->
-                <header id="header">
-                    <a href="index.html" class="logo"><strong>outlier</strong></a>
-                    <div class="col-18 col-md-9 p-6 mt-20">
-                        <div style="text-align:center"><h1 class="h1"><strong>JOOVIS</strong></h1></div>
-                    </div>
-                    <ul class="icons">
-                        <li><a href="https://eclass.dongduk.ac.kr/ilos/main/main_form.acl"><img src="./assets/img/logo_smart.jpg" width="50" height="25" class="rounded-circle img-fluid border"></a></li>
-                        <li><a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/dogduk_icon.png" width="50" height="25" class="rounded-circle img-fluid border"></a></li>
-                        <li><a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/logo_net.jpg" width="50" height="25" class="rounded-circle img-fluid border"></a></li>
-                    </ul>
-                </header>
-                <section class="container py-1">
-                    <div class="row text-center pt-lg-1">
-                        <header>
-                            <div class="row">
-                                <div class="col-48 col-md-3 p-5 mt-3">
-                                    <a href="#"><img src="./assets/img/category_img_01.png" class="rounded-circle img-fluid border"></a>
-                                    <h5 class="text-center mt-3 mb-3">하기 싫다.</h5>
-                                </div>
-                                <div class="col-48 col-md-3 p-5 mt-3">
-                                    <a href="#"><img src="./assets/img/category_img_02.png" class="rounded-circle img-fluid border"></a>
-                                    <h2 class="h5 text-center mt-3 mb-3">그래도 해봐야지</h2>
-                                </div>
-                                <div class="col-48 col-md-3 p-5 mt-3">
-                                    <a href="#"><img src="./assets/img/category_img_03.png" class="rounded-circle img-fluid border"></a>
-                                    <h2 class="h5 text-center mt-3 mb-3">집에 가고 싶다</h2>
-                                </div>
-                            </div>
-                        </header>
-                    </div>
-                </section>
-                <!-- End Categories of The Month -->
-            </div>
-            </div>
-            <!-- Sidebar -->
-            <div id="sidebar">
-                <div class="inner">
-
-                <!-- Menu -->
-                    <nav id="menu">
-                        <header class="major">
-                            <h2>Menu</h2>
-                        </header>
-                     <ul>
-                        <li><a href="index.html">Homepage</a></li>
-                         <li>
-                            <span class="opener">OUTLIER 발표회 자료집</span>
-                            <ul>
-                                <li><a href="#">2021년 7월 최종 발표회</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#"> 캘린더 </a></li>
-                        <li><a href="smartclass.html"> 과제&강의 현황 </a></li>
-                    </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    <!-- Start Footer -->
-    <footer class="bg-dark" id="tempaltemo_footer">
-
-        <div class="w-100 bg-black py-3">
-            <div class="container">
-                <div class="row pt-2">
-                    <div class="col-12">
-                        <p class="text-left text-light">
-                            2021 OUTLIER
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </footer>
-    <!-- End Footer -->
-
-    <!-- Start Script -->
-    <script src="assets/js/jquery-1.11.0.min.js"></script>
-    <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
-
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-    <!-- End Script -->
-</body>
+<html lang='en'>
+    <head>
+        <meta charset="utf-8">
+        <title> OUTLIER </title>
+    </head>
+    <body>
+        <h1>말하는 감자들의 모임, outlier</h1>
+        <img src="./assets/img/outlier.png" width="1080px">
+        <div>안녕 나는 감자야</div>
+        <P>감자는 식물 가짓과의 여러해살이풀. 높이는 60~100cm이며, 잎은 겹잎이고 어긋난다. <hr>
+            초여름에 흰색 또는 자주색의 통꽃이 줄기 끝에 핀다. 비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <hr>
+            남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
+    </body>
+</html>
