--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
     <head>
         <meta charset="utf-8">
         <title> OUTLIER </title>
+
+        <link rel="stylesheet" href="assets/css/main.css">
+
     </head>
     <body>
-        <h1>말하는 감자들의 모임, outlier</h1>
-        <img src="./assets/img/outlier.png" width="1080px">
-        <div>안녕 나는 감자야</div>
-        <P>감자는 식물 가짓과의 여러해살이풀. 높이는 60~100cm이며, 잎은 겹잎이고 어긋난다. <hr>
-            초여름에 흰색 또는 자주색의 통꽃이 줄기 끝에 핀다. 비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <hr>
-            남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
+        <header>
+            <h1 style="text-align: center;">outlier</h1>
+            <h1 style="text-align: center;">감자가 열심히 자라나는 중</h1>
+        </header>
+
+        outlier 인스타그램 바로 가기 : 
+        <a href="https://instagram.com/ddw_outlier?utm_medium=copy_link">outlier 인스타그램</a>
+        <img src="./assets/img/outlier.png" width="720px">
+        <P>감자는 식물 가짓과의 여러해살이풀. 높이는 60~100cm이며, 잎은 겹잎이고 어긋난다.<br>
+             초여름에 흰색 또는 자주색의 통꽃이 줄기 끝에 핀다. <br>
+             비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <br>
+             남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
+        
+        <footer class="bg-dark" id="footer">
+            <h3 class="copyright"> 2021 outlier </h3> 
+        </footer>
+
     </body>
 </html>
