--- a/index.html
+++ b/index.html
@@ -8,19 +8,33 @@
 
     </head>
     <body>
+        <!-- header 시작 -->
         <header>
             <h1 style="text-align: center;">outlier</h1>
             <h1 style="text-align: center;">감자가 열심히 자라나는 중</h1>
+            <a href="https://instagram.com/ddw_outlier?utm_medium=copy_link"><img id = "icons" src="assets/img/insta.png"></a>
         </header>
 
         outlier 인스타그램 바로 가기 : 
-        <a href="https://instagram.com/ddw_outlier?utm_medium=copy_link">outlier 인스타그램</a>
+        <a href="https://instagram.com/ddw_outlier">outlier 인스타그램</a>
+        <section id='banner'>
+            <div class='content'>
+                <div id="template" class="carousel slide" data-bs-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#template" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#template" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#template" data-bs-slide-to="2"></li>
+                    </ol>
+                </div>
+            </div>
+        </section>
         <img src="./assets/img/outlier.png" width="720px">
         <P>감자는 식물 가짓과의 여러해살이풀. 높이는 60~100cm이며, 잎은 겹잎이고 어긋난다.<br>
              초여름에 흰색 또는 자주색의 통꽃이 줄기 끝에 핀다. <br>
              비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <br>
              남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
-        
+
+        <!-- footer 시작 -->
         <footer class="bg-dark" id="footer">
             <h3 class="copyright"> 2021 outlier </h3> 
         </footer>
