--- a/index.html
+++ b/index.html
@@ -58,11 +58,8 @@
         <header id = header>
             <h1 style="text-align: center;">outlier</h1>
             <h1 style="text-align: center;">감자가 열심히 자라나는 중</h1>
-            <a href="https://instagram.com/ddw_outlier?utm_medium=copy_link"><img class = "icons" src="assets/img/insta.png"></a>
+            <a href="https://instagram.com/ddw_outlier?"><img class = "rounded-circle" src="assets/img/insta.png"></a>
         </header>
-
-        outlier 인스타그램 바로 가기 : 
-        <a href="https://instagram.com/ddw_outlier">outlier 인스타그램</a>
         <section id='banner'>
             <div class='content'>
                 <div id="template" class="carousel slide" data-bs-ride="carousel">
@@ -79,7 +76,6 @@
              초여름에 흰색 또는 자주색의 통꽃이 줄기 끝에 핀다. <br>
              비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <br>
              남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
-
         <!-- footer 시작 -->
         <footer class="bg-dark" id="footer">
             <h3 class="copyright"> 2021 outlier </h3> 
