--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id = header>
             <a href="index.html" class="title">
-                <img src="./assets/img/title.png" alt>
+                <img src="./assets/img/title.png" alt="outlier 로고">
             </a>
             <ul id="navigation">
                 <li>
