--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <body>
         <div id = header>
             <a href="index.html" class="title">
-                <img src="./assets/img/title.png" alt="outlier 로고">
+                <img src="./assets/img/title.png" alt>
+                <a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/insta.png" class="box"></a>
             </a>
             <ul id="navigation">
                 <li>
@@ -27,14 +28,13 @@
                 </li>
             </ul>
         </div>
-
         <P>감자는 식물 가짓과의 여러해살이풀. 높이는 60~100cm이며, 잎은 겹잎이고 어긋난다.<br>
              초여름에 흰색 또는 자주색의 통꽃이 줄기 끝에 핀다. <br>
              비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <br>
              남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
         <!-- footer 시작 -->
         <footer class="bg-dark" id="footer">
-            <h3 class="copyright"> 2021 outlier </h3> 
+        <h3 class="copyright"> 2021 outlier </h3> 
         </footer>
 
     </body>
