--- a/member.html
+++ b/member.html
@@ -8,6 +8,26 @@
 
     </head>
     <body>
+            <div id = header>
+            <a href="index.html" class="title">
+                <img src="./assets/img/title.png" alt>
+                <a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/insta.png" class="box"></a>
+            </a>
+            <ul id="navigation">
+                <li>
+                    <a href="index.html">home</a>
+                </li>
+                <li>
+                    <a href="member.html">member</a>
+                </li>
+                <li>
+                    <a href="resourcebook.html">resource book</a>
+                </li>
+                <li>
+                    <a href="info.html">info</a>
+                </li>
+            </ul>
+        </div>
         <p>감자</p>
         <!-- footer 시작 -->
         <footer class="bg-dark" id="footer">
