--- a/resourcebook.html
+++ b/resourcebook.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title> OUTLIER </title>
-
+        <!-- 페이지 아이콘 -->
+        <link rel="shortcut icon" href="assets/img/gamja.jpg">
+        <!-- css -->
         <link rel="stylesheet" href="assets/css/main.css">
 
     </head>
     <body>
-            <div id = header>
+        <div id = header>
             <a href="index.html" class="title">
                 <img src="./assets/img/title.png" alt>
-                <a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/insta.png" class="box"></a>
             </a>
-            <ul id="navigation">
+            <ul>
                 <li>
                     <a href="index.html">home</a>
                 </li>
