--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title> OUTLIER </title>
-
+        <!-- 페이지 아이콘 -->
+        <link rel="shortcut icon" href="assets/img/gamja.jpg">
+        <!-- css -->
         <link rel="stylesheet" href="assets/css/main.css">
 
     </head>
@@ -11,9 +13,8 @@
         <div id = header>
             <a href="index.html" class="title">
                 <img src="./assets/img/title.png" alt>
-                <a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/insta.png" class="box"></a>
             </a>
-            <ul id="navigation">
+            <ul>
                 <li>
                     <a href="index.html">home</a>
                 </li>
@@ -33,9 +34,19 @@
              비교적 찬 기후에서 잘 자라고 성장 기간이 짧다. <br>
              남아메리카 칠레가 원산지로 온대, 한대에서 널리 재배된다.</P>
         <!-- footer 시작 -->
-        <footer class="bg-dark" id="footer">
-        <h3 class="copyright"> 2021 outlier </h3> 
-        </footer>
+        <div id="footer">
+            <div>
+                <p> © 2021 outlier </p> 
+                <ul>
+                    <li>
+                        <a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/insta.jpg" class="box"></a>
+                    </li>
+                    <li>
+                        <a href="https://outlier.agit.io"><img src="./assets/img/agit.jpg" class="box"></a>
+                    </li>
+                </ul>
+            </div>
+    </div>
 
     </body>
 </html>
