--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="shortcut icon" href="assets/img/gamja.jpg">
         <!-- css -->
         <link rel="stylesheet" href="assets/css/main.css">
-
     </head>
     <body>
         <div id = header>
@@ -39,14 +38,13 @@
                 <p> © 2021 outlier </p> 
                 <ul>
                     <li>
-                        <a href="https://www.dongduk.ac.kr/kor/main.do"><img src="./assets/img/insta.jpg" class="box"></a>
+                        <a href="https://www.dongduk.ac.kr/kor/main.do"><img class="box" src="./assets/img/insta.jpg"></a>
                     </li>
                     <li>
                         <a href="https://outlier.agit.io"><img src="./assets/img/agit.jpg" class="box"></a>
                     </li>
                 </ul>
             </div>
-    </div>
-
+        </div>
     </body>
 </html>
