--- a/member.html
+++ b/member.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> OUTLIER </title>
-        <!-- 페이지 아이콘 -->
-        <link rel="shortcut icon" href="assets/img/gamja.jpg">
-        <!-- css -->
+
         <link rel="stylesheet" href="assets/css/main.css">
 
     </head>
@@ -31,9 +29,19 @@
         </div>
         <p>감자</p>
         <!-- footer 시작 -->
-        <footer class="bg-dark" id="footer">
-            <h3 class="copyright"> 2021 outlier </h3> 
-        </footer>
+        <div id="footer">
+            <div>
+                <p> © 2021 outlier </p> 
+                <ul>
+                    <li>
+                        <a href="https://www.dongduk.ac.kr/kor/main.do"><img class="box" src="./assets/img/insta.jpg"></a>
+                    </li>
+                    <li>
+                        <a href="https://outlier.agit.io"><img src="./assets/img/agit.jpg" class="box"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
     </body>
 </html>
