--- a/member.html
+++ b/member.html
@@ -5,6 +5,7 @@
         <title> OUTLIER </title>
 
         <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/member.css">
 
     </head>
     <body>
@@ -27,7 +28,30 @@
                 </li>
             </ul>
         </div>
-        <p>감자</p>
+        <!--명단 반응-->
+        <button class="btn btn--wut">
+                20181076 주다희
+        </button>
+        <button class="btn btn--jump">
+            20181035 강다영
+        </button>
+        <button class="btn btn--blink">
+            20181040 김나연
+    </button>
+    <button class="btn btn--pulse">
+        20181041 김도영
+    </button>
+    <button class="btn btn--shockwave">
+         20181052 송문영
+    </button>
+    <button class="btn btn--wiggle">
+        20181067 이채연
+    </button>
+    <button class="btn btn--jump">
+        20181072 정현정
+    </button>
+
+
         <!-- footer 시작 -->
         <div id="footer">
             <div>
@@ -42,6 +66,9 @@
                 </ul>
             </div>
         </div>
-
+    <!-- Start Script -->
+    <script src="assets/js/member.js"></script>
+    <!-- End Script -->
     </body>
+    
 </html>
