member list add

--- a/member.html
+++ b/member.html
@@ -50,8 +50,75 @@
     	<button class="btn btn--jump">
         	20181072 정현정
     	</button>
+    	
+    	<br>
+    	<button class="btn btn--blink">
+        	20160131 김지현
+    	</button>
+    	<button class="btn btn--jump">
+        	20171033 임영서
+    	</button>
+    	<button class="btn btn--pulse">
+        	20171039 최지원
+    	</button>
+    	<button class="btn btn--shockwave">
+        	20180278 이민주
+    	</button>
+    	<button class="btn btn--wiggle">
+        	20181036 강지수
+    	</button>
+        <button class="btn btn--wut">
+        	20181037 강하영
+    	</button>
+        <button class="btn btn--blink">
+        	20181062 유근영
+    	</button>
+    	<button class="btn btn--jump">
+        	20181064 이다형
+    	</button>
+    	<button class="btn btn--pulse">
+        	20181071 정유현
+    	</button>
+    	<button class="btn btn--shockwave">
+        	20181809 김수연
+    	</button>
+    	<button class="btn btn--wiggle">
+        	20191037 김성경
+    	</button>
+        <button class="btn btn--wut">
+        	20191042 김채민
+    	</button>
+        <button class="btn btn--blink">
+        	20191045 김혜원
+    	</button>
+    	<button class="btn btn--jump">
+        	20191047 박수연
+    	</button>
+    	<button class="btn btn--pulse">
+        	20191052 백아현
+    	</button>
+    	<button class="btn btn--shockwave">
+        	20191057 우예진
+    	</button>
+    	<button class="btn btn--wiggle">
+        	20181058 이경민
+    	</button>
+        <button class="btn btn--wut">
+        	20191063 이지현
+        </button>
 
-
+        <button class="btn btn--blink">
+            20191064 이지효
+    	</button>
+    	<button class="btn btn--jump">
+        	20191066 이해림
+    	</button>
+    	<button class="btn btn--pulse">
+        	20191074 정해린
+    	</button>
+    	<button class="btn btn--shockwave">
+        	20191080 홍예원
+    	</button>
         <!-- footer 시작 -->
         <div id="footer">
             <div>
