--- a/index.html
+++ b/index.html
@@ -69,45 +69,45 @@
 
             <ul id="sb-slider" class="sb-slider">
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2969141180" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
+                    <a href="#" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
-                        <h3>Creative Lifesaver</h3>
+                        <h3>Creative 감자</h3>
                     </div>
                 </li>
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2968268187" target="_blank"><img src="assets/img/7.jpg" alt="image2"/></a>
+                    <a href="#" target="_blank"><img src="assets/img/7.jpg" alt="image2"/></a>
                     <div class="sb-description">
-                        <h3>Honest Entertainer</h3>
+                        <h3>감자 제조 중 </h3>
                     </div>
                 </li>
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2968114825" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
+                    <a href="#" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
-                        <h3>Brave Astronaut</h3>
+                        <h3>저녁 감자</h3>
                     </div>
                 </li>
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2968122059" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
+                    <a href="#" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
-                        <h3>Affectionate Decision Maker</h3>
+                        <h3>감자 Maker</h3>
                     </div>
                 </li>
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2969119944" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
+                    <a href="#" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
-                        <h3>Faithful Investor</h3>
+                        <h3>하하</h3>
                     </div>
                 </li>
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2968126177" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
+                    <a href="#" target="_blank"><img src="assets/img/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
-                        <h3>Groundbreaking Artist</h3>
+                        <h3>믱</h3>
                     </div>
                 </li>
                 <li>
                     <a href="http://www.flickr.com/photos/strupler/2968945158" target="_blank"><img src="images/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
-                        <h3>Selfless Philantropist</h3>
+                        <h3>감자</h3>
                     </div>
                 </li>
             </ul>
