--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="http://www.flickr.com/photos/strupler/2968945158" target="_blank"><img src="images/7.jpg" alt="image1"/></a>
+                    <a href="#" target="_blank"><img src="images/7.jpg" alt="image1"/></a>
                     <div class="sb-description">
                         <h3>감자</h3>
                     </div>
