팀별 발표 자료

--- a/211R9.html
+++ b/211R9.html
@@ -28,17 +28,17 @@
             </ul>
         </div>
         <div id="source">
-            <img src="./assets/img/R9/HW1_1.jpg">
-            <img src="./assets/img/R9/HW1_2.jpg">
-            <img src="./assets/img/R9/HW1_3.jpg">
-            <img src="./assets/img/R9/HW2_1.jpg">
-            <img src="./assets/img/R9/HW2_3.jpg">
-            <img src="./assets/img/R9/HW2_4.jpg">
-            <img src="./assets/img/R9/HW2_5.jpg">
-            <img src="./assets/img/R9/HW3_1.jpg">
-            <img src="./assets/img/R9/HW3_2.jpg">
-            <img src="./assets/img/R9/HW4_1.jpg">
-            <img src="./assets/img/R9/HW4_2.jpg">
+            <img src="./assets/img/211R9/HW1_1.jpg">
+            <img src="./assets/img/211R9/HW1_2.jpg">
+            <img src="./assets/img/211R9/HW1_3.jpg">
+            <img src="./assets/img/211R9/HW2_1.jpg">
+            <img src="./assets/img/211R9/HW2_3.jpg">
+            <img src="./assets/img/211R9/HW2_4.jpg">
+            <img src="./assets/img/211R9/HW2_5.jpg">
+            <img src="./assets/img/211R9/HW3_1.jpg">
+            <img src="./assets/img/211R9/HW3_2.jpg">
+            <img src="./assets/img/211R9/HW4_1.jpg">
+            <img src="./assets/img/211R9/HW4_2.jpg">
         </div>
         <!-- footer 시작 -->
         <div id="footer">
@@ -46,7 +46,7 @@
                 <p> © 2021 outlier </p> 
                 <ul>
                     <li>
-                        <a href="https://www.dongduk.ac.kr/kor/main.do"><img class="box" src="./assets/img/insta.jpg"></a>
+                        <a href="https://www.instagram.com/ddw_outlier/"><img class="box" src="./assets/img/insta.jpg"></a>
                     </li>
                     <li>
                         <a href="https://outlier.agit.io"><img src="./assets/img/agit.jpg" class="box"></a>
