--- a/211R8.html
+++ b/211R8.html
@@ -27,8 +27,8 @@
                 </li>
             </ul>
         </div>
-        <h1> 4팀 (Fourtato팀) 기업 이미지 분석과 주가 예측 </h1>
-        <p> 20181036 강지수 / 20181809 김수연 / 20191066 이해림 / 20191063 이지현 </p>
+         <h1> 8팀 (영양갱팀) 이사 지역 추천 시스템 </h1>
+        <p> 20160131 김지현 | 20181067 이채연 | 20180278 이민주 | 20191058 이경민 </p>
         <div id="source">
             <img src="./assets/img/211R8/1.jpg">
             <img src="./assets/img/211R8/2.jpg">
