--- a/211R9.html
+++ b/211R9.html
@@ -27,6 +27,8 @@
                 </li>
             </ul>
         </div>
+        <h1> 9팀 (JOOVIS팀) 여가 추천 서비스 </h1>
+        <p> 20181076 주다희 | 20191047 박수연 | 20191064 이지효 </p>
         <div id="source">
             <img src="./assets/img/211R9/HW1_1.jpg">
             <img src="./assets/img/211R9/HW1_2.jpg">
