--- a/resourcebook.html
+++ b/resourcebook.html
@@ -27,12 +27,12 @@
                 </li>
             </ul>
         </div>
-        <a href="211R9.html">1팀 (sweet potato팀) 노인 맞춤 식단 추천 시스템 </a>
-        <a href="211R9.html">2팀 (사고뭉치팀) 동덕 관련 키워드 분석</a>
-        <a href="211R9.html">3팀 (맛 좋은 수박팀) 수박 당도 예측 시스템</a>
-        <a href="211R9.html">4팀 (Fourtato팀) 기업 이미지 분석과 주가 예측</a>
-        <a href="211R9.html">7팀 (정김이들팀) 사재기 의혹 음원 특징 분석 & 순위예측</a>
-        <a href="211R9.html">8팀 (영양갱팀) 이사 지역 추천 시스템</a>
+        <a href="211R9.html">1팀 (sweet potato팀) 노인 맞춤 식단 추천 시스템 </a><br>
+        <a href="211R9.html">2팀 (사고뭉치팀) 동덕 관련 키워드 분석</a><br>
+        <a href="211R9.html">3팀 (맛 좋은 수박팀) 수박 당도 예측 시스템</a><br>
+        <a href="211R9.html">4팀 (Fourtato팀) 기업 이미지 분석과 주가 예측</a><br>
+        <a href="211R9.html">7팀 (정김이들팀) 사재기 의혹 음원 특징 분석 & 순위예측</a><br>
+        <a href="211R9.html">8팀 (영양갱팀) 이사 지역 추천 시스템</a><br>
         <a href="211R9.html">9팀 (JOOVIS팀) 여가 추천 서비스</a>
         <!-- footer 시작 -->
         <div id="footer">
