--- a/211R5.html
+++ b/211R5.html
@@ -30,24 +30,24 @@
          <h1> 5팀 기초 화장품 리뷰 분석 및 추천 </h1>
         <p> 20181071 정유현 | 20181037 강하영 | 20191057 우예진 </p>
         <div id="source">
-            <img src="./assets/img/211R5/슬라이드1.jpg">
-            <img src="./assets/img/211R5/슬라이드2.jpg">
-            <img src="./assets/img/211R5/3.jpg">
-            <img src="./assets/img/211R5/슬라이드4.jpg">
-            <img src="./assets/img/211R5/슬라이드5.jpg">
-            <img src="./assets/img/211R5/슬라이드6.jpg">
-            <img src="./assets/img/211R5/슬라이드7.jpg">
-            <img src="./assets/img/211R5/슬라이드8.jpg">
-            <img src="./assets/img/211R5/슬라이드9.jpg">
-            <img src="./assets/img/211R5/슬라이드10.jpg">
-            <img src="./assets/img/211R5/슬라이드11.jpg">
-            <img src="./assets/img/211R5/슬라이드12.jpg">
-            <img src="./assets/img/211R5/슬라이드13.jpg">
-            <img src="./assets/img/211R5/슬라이드14.jpg">
-            <img src="./assets/img/211R5/슬라이드15.jpg">
-            <img src="./assets/img/211R5/슬라이드16.jpg">
-            <img src="./assets/img/211R5/슬라이드17.jpg">
-            <img src="./assets/img/211R5/슬라이드18.jpg">
+            <img src="./assets/img/211R5/슬라이드1.JPG">
+            <img src="./assets/img/211R5/슬라이드2.JPG">
+            <img src="./assets/img/211R5/슬라이드3.JPG">
+            <img src="./assets/img/211R5/슬라이드4.JPG">
+            <img src="./assets/img/211R5/슬라이드5.JPG">
+            <img src="./assets/img/211R5/슬라이드6.JPG">
+            <img src="./assets/img/211R5/슬라이드7.JPG">
+            <img src="./assets/img/211R5/슬라이드8.JPG">
+            <img src="./assets/img/211R5/슬라이드9.JPG">
+            <img src="./assets/img/211R5/슬라이드10.JPG">
+            <img src="./assets/img/211R5/슬라이드11.JPG">
+            <img src="./assets/img/211R5/슬라이드12.JPG">
+            <img src="./assets/img/211R5/슬라이드13.JPG">
+            <img src="./assets/img/211R5/슬라이드14.JPG">
+            <img src="./assets/img/211R5/슬라이드15.JPG">
+            <img src="./assets/img/211R5/슬라이드16.JPG">
+            <img src="./assets/img/211R5/슬라이드17.JPG">
+            <img src="./assets/img/211R5/슬라이드18.JPG">
         </div>
         <!-- footer 시작 -->
         <div id="footer">
