--- a/211R2.html
+++ b/211R2.html
@@ -30,19 +30,19 @@
         <h3>2팀 (사고뭉치팀) 동덕 관련 키워드 분석 </h3>
         <p> 20171039 최지원 | 20181059 송문영 | 20191045 김혜원 </p>
         <div id="source">
-            <img src="./assets/img/211R2/1.png">
-            <img src="./assets/img/211R2/2.png">
-            <img src="./assets/img/211R2/3.png">
-            <img src="./assets/img/211R2/4.png">
-            <img src="./assets/img/211R2/5.png">
-            <img src="./assets/img/211R2/6.png">
-            <img src="./assets/img/211R2/7.png">
-            <img src="./assets/img/211R2/8.png">
-            <img src="./assets/img/211R2/9.png">
-            <img src="./assets/img/211R2/10.png">
-            <img src="./assets/img/211R2/11.png">
-            <img src="./assets/img/211R2/12.png">
-            <img src="./assets/img/211R2/13.png">
+            <img src="./assets/img/211R2/1.PNG">
+            <img src="./assets/img/211R2/2.PNG">
+            <img src="./assets/img/211R2/3.PNG">
+            <img src="./assets/img/211R2/4.PNG">
+            <img src="./assets/img/211R2/5.PNG">
+            <img src="./assets/img/211R2/6.PNG">
+            <img src="./assets/img/211R2/7.PNG">
+            <img src="./assets/img/211R2/8.PNG">
+            <img src="./assets/img/211R2/9.PNG">
+            <img src="./assets/img/211R2/10.PNG">
+            <img src="./assets/img/211R2/11.PNG">
+            <img src="./assets/img/211R2/12.PNG">
+            <img src="./assets/img/211R2/13.PNG">
         </div>
         <!-- footer 시작 -->
         <div id="footer">
