--- a/211R5.html
+++ b/211R5.html
@@ -27,7 +27,7 @@
                 </li>
             </ul>
         </div>
-         <h1> 5팀 기초 화장품 리뷰 분석 및 추천 </h1>
+         <h1> 5팀 (잇프제는 잇프조) 기초 화장품 리뷰 분석 및 추천 </h1>
         <p> 20181071 정유현 | 20181037 강하영 | 20191057 우예진 </p>
         <div id="source">
             <img src="./assets/img/211R5/슬라이드1.JPG">
