--- a/info.html
+++ b/info.html
@@ -29,6 +29,20 @@
         </div>
         <h1>outlier란?</h1>
         <h6>감자들의 모임이다</h6>
+        <hr>
+        <h1>말하는 감자팀</h1>
+        <h3>매주 정기 모임 진행</h3>
+        <h6>이전 프로젝트 발표<hr>이전 프로젝트를 진행해 본 사람들이 프로젝트를 발표하며 프로젝트 내용만이 아닌 진행 시에 어떻게 진행하였고 어떻게 준비하였는지 들어볼 수 있는 시간</h6>
+        <hr><h6>과제 발표 및 안내<hr>과제 또는 해커톤에 참여하고 발표하며 프로그래밍 언어에 대하여 알아가는 시간</h6>
+        <hr><h6>발제 진행<hr>맡은 주제에 관하여 공부해보며 이를 발표해보며 이러한 것도 있구나~ 알아가는 시간!</h6>
+        <h3>매주 정기 모임 진행</h3>
+        
+        <hr>
+        <h1>싹 튼 감자팀</h1>
+        <h3>이번 학기 새롭게 시작되는 취준반</h3>
+        <h6>GIT을 활용한 포트폴리오 작성<hr>깃허브 프로필 설정, 계정 관리부터, 취업을 위해 깃 허브를 어떻게 이용해야 하는지 꿀팁을 공유, 커밋과 레파지토리를 알차게 구성해봅시다! </h6>
+        <hr><h6>자기 소개서 작성<hr>안녕하세요. 저는 21세기 노예입니다. 아니 이게 아니고,,, 혼자 쓰면 막막하고 잘 쓴 건지 알기 힘든 자소서! 정통이들과 함께 작성해보며 기업별로 원하는 인재상에 맞춰 자신을 소개해봅시다.</h6>
+        <hr><h6>직무별 면접 준비<hr>맡은 주제에 관하여 공부해보며 이를 발표해보며 이러한 것도 있구나~ 알아가는 시간!</h6>
         <!-- footer 시작 -->
         <div id="footer">
             <div>
