--- a/info.html
+++ b/info.html
@@ -28,21 +28,43 @@
             </ul>
         </div>
         <h1>outlier란?</h1>
-        <h6>감자들의 모임이다</h6>
-        <hr>
-        <h1>말하는 감자팀</h1>
-        <h3>매주 정기 모임 진행</h3>
-        <h6>이전 프로젝트 발표<hr>이전 프로젝트를 진행해 본 사람들이 프로젝트를 발표하며 프로젝트 내용만이 아닌 진행 시에 어떻게 진행하였고 어떻게 준비하였는지 들어볼 수 있는 시간</h6>
-        <hr><h6>과제 발표 및 안내<hr>과제 또는 해커톤에 참여하고 발표하며 프로그래밍 언어에 대하여 알아가는 시간</h6>
-        <hr><h6>발제 진행<hr>맡은 주제에 관하여 공부해보며 이를 발표해보며 이러한 것도 있구나~ 알아가는 시간!</h6>
-        <h3>매주 정기 모임 진행</h3>
-        
-        <hr>
-        <h1>싹 튼 감자팀</h1>
+        <h3>말하는 감자들의 모임으로 뭐든 해보자 라는 취지로 만들어진 정보통계학과 동아리</h3>
+        <br><hr>
+        <h2>말하는 감자팀 : 정기 모임</h2>
+        <h4>이전 프로젝트 발표</h4>
+        이전 프로젝트를 진행해 본 사람들이 프로젝트를 발표하며 프로젝트 내용만이 아닌 진행 시에 어떻게 진행하였고 어떻게 준비하였는지 들어볼 수 있는 시간
+        <h4>과제 발표 및 안내</h4>
+        과제 또는 해커톤에 참여하고 발표하며 프로그래밍 언어에 대하여 알아가는 시간
+        <h4>발제</h4>
+        맡은 주제에 관하여 공부해보며 이를 발표해보며 이러한 것도 있구나~ 알아가는 시간!
+        <br><br>
+        <h2>말하는 감자팀 : 프로젝트</h2>
+        <h4>1학년과 2학년은 동기들과 함께 프로젝트를 진행하며 프로젝트도 하고 동기들과 알아가는 시간도 가지며 진행!</h4>
+        <h4>3학년과 4학년은 강의 때 배운 것들을 프로젝트에 활용하며 공모전과 포트폴리오를 준비하는 프로젝트 진행</h4>
+        비슷한 주제를 준비하는 정통이들과 함께 프로젝트를 진행해볼 수 있는 기회</br>
+        (이전 프로젝트 확인 <a href="resourcebook.html">click!</a>)<br>
+        * 빅데이터를 활용한 마케팅, 추천 시스템 등에 관한 프로젝트 진행 시 ssoma와의 협업 가능! (필요 인원 보충 가능!)
+
+        <br><hr>
+        <h2>싹 튼 감자팀</h2>
         <h3>이번 학기 새롭게 시작되는 취준반</h3>
-        <h6>GIT을 활용한 포트폴리오 작성<hr>깃허브 프로필 설정, 계정 관리부터, 취업을 위해 깃 허브를 어떻게 이용해야 하는지 꿀팁을 공유, 커밋과 레파지토리를 알차게 구성해봅시다! </h6>
-        <hr><h6>자기 소개서 작성<hr>안녕하세요. 저는 21세기 노예입니다. 아니 이게 아니고,,, 혼자 쓰면 막막하고 잘 쓴 건지 알기 힘든 자소서! 정통이들과 함께 작성해보며 기업별로 원하는 인재상에 맞춰 자신을 소개해봅시다.</h6>
-        <hr><h6>직무별 면접 준비<hr>맡은 주제에 관하여 공부해보며 이를 발표해보며 이러한 것도 있구나~ 알아가는 시간!</h6>
+        <h4>GIT을 활용한 포트폴리오 작성</h4>
+        깃허브 프로필 설정, 계정 관리부터, 취업을 위해 깃 허브를 어떻게 이용해야 하는지 꿀팁을 공유, 커밋과 레파지토리를 알차게 구성해봅시다!
+        <h4>자기 소개서 작성</h4>
+        안녕하세요. 저는 21세기 노예입니다. 아니 이게 아니고,,, <br>
+        혼자 쓰면 막막하고 잘 쓴 건지 알기 힘든 자소서! 정통이들과 함께 작성해보며 기업별로 원하는 인재상에 맞춰 자신을 소개해봅시다.
+        <h4>직무별 면접 준비</h4>
+        진행해 본 프로젝트도 있고 이것저것 활용은 할 줄 알지만 개념과 이걸 왜 활용했는지에 대하여 말할 준비가 안 된 감자 모두 come-on<br>
+        전공과 관련 지식에 대하여 간단한 개념 등을 말할 수 있게 정리하고 모의 면접을 진행해보는 시간
+        <h4>직무별 스터디 진행</h4>
+        코테 준비 혼자 가능한가요? <br>
+        같이 기출을 풀어보고 풀이를 공유하며 같이 실력을 늘려볼 수 있는 시간! <br>
+        코테뿐만 아니라 NCS, GSAT 등 여러 스터디를 진행해볼 예정입니다 :)
+        <h4>직무별 멘토링 진행</h4>
+        졸업생 선배님을 초청하여 같이 이야기할 시간을 기획중에 있습니다! <br>
+        <h4>그 외</h4>
+        그 외에 더 필요한 부분에 대하여 같이 논의하여 진행해 볼 예정입니다.<br>
+        외로운 취준,,, 정통이들과 함께 해요,,!
         <!-- footer 시작 -->
         <div id="footer">
             <div>
