--- a/info.html
+++ b/info.html
@@ -27,6 +27,7 @@
                 </li>
             </ul>
         </div>
+        <a href="info212.html"> 이번 학기 지원하러 가기 </a>
         <h1>outlier란?</h1>
         <h3>말하는 감자들의 모임으로 뭐든 해보자 라는 취지로 만들어진 정보통계학과 동아리</h3>
         <br><hr>
